<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CAPTCAM</string>
    <string name="detectar">DETECTAR</string>

    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Face Recognition</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_presentacion">presentacionAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="verificar">VERIFICAR</string>

    <string name="imagen_nueva">IMAGEN NUEVA</string>
    <string name="imagen_inicial">IMAGEN INICIAL</string>
    <string name="result">Result :</string>
    <string name="verificacion_de_rostros">VERIFICACION DE ROSTROS</string>
    <string name="uno">UNO</string>
    <string name="dos">DOS</string>

</resources>