<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".comparacionRostros">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:text="@string/verificacion_de_rostros"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:text="@string/result"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/llay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagen_inicial"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagen_nueva"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:layout_marginStart="90dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llay"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/dowload"
            android:id="@+id/image1"
            android:contentDescription="@string/uno">
        </ImageView>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:src="@drawable/dowload"
            android:layout_gravity="center_vertical"
            android:id="@+id/image2"
            android:contentDescription="@string/dos" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verify"
        android:layout_below="@+id/llay"
        android:text="@string/verificar"
        android:layout_margin="50dp"
        android:textColor="#000"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>